# fortran-migrator

./: .gitignore  CMakeLists.txt  DEVELOPER.md  NOTE.md  PROGRESS.md  README.md  TASK-MUMPS-20260502.md  check_kind10.f90  check_kind16  la_constants_mf.mod  multifloats.mod  pyproject.toml
cmake/: CMakeLists.txt  CMakePresets.json  FortranCompiler.cmake  mpiseq_c_stubs.c  mpiseq_mw_stubs.f90  mpiseq_qx_stubs.f
tests/: CMakeLists.txt  KIND48_BASELINE_STATUS.md  README.md  REPORT.md  RESULT.md  test_symbol_database.cpp  test_transformation.cpp
tests/blacs/: CHANGELOG.md  CMakeLists.txt  TODO.md
tests/blacs/common/: blacs_prec_report.f90  target_blacs_body.fypp
tests/blacs/target_kind10/: target_blacs.fypp
tests/blacs/target_kind16/: target_blacs.fypp
tests/blacs/target_multifloats/: target_blacs.fypp
tests/blacs/tests/: test_blacs_pinfo.f90  test_blacs_set.f90  test_grid_info.f90  test_igebs2d.f90  test_igesd2d.f90  test_igsum2d.f90  test_qgamx2d.f90  test_qgamx2d_rc.f90  test_qgebs2d.f90  test_qgesd2d.f90  test_qgsum2d.f90  test_qgsum2d_rc.f90  test_qtrbs2d.f90  test_qtrsd2d.f90  test_xgamx2d.f90  test_xgamx2d_rc.f90  test_xgebs2d.f90  test_xgesd2d.f90  test_xgsum2d.f90  test_xgsum2d_rc.f90  test_xtrsd2d.f90
tests/blas/: CMakeLists.txt  README.md
tests/blas/common/: prec_report.f90  ref_quad_blas.f90  ref_quad_blas.quad_renames.txt  target_blas_body.fypp
tests/blas/level1/: test_dasum.f90  test_daxpy.f90  test_dcabs1.f90  test_dcopy.f90  test_ddot.f90  test_dnrm2.f90  test_drot.f90  test_drotg.f90  test_drotm.f90  test_drotmg.f90  test_dscal.f90  test_dswap.f90  test_dzasum.f90  test_dznrm2.f90  test_idamax.f90  test_izamax.f90  test_zaxpy.f90  test_zcopy.f90  test_zdotc.f90  test_zdotu.f90  test_zdrot.f90  test_zdscal.f90  test_zrotg.f90  test_zscal.f90  test_zswap.f90
tests/blas/level2/: test_dgbmv.f90  test_dgemv.f90  test_dger.f90  test_dsbmv.f90  test_dspmv.f90  test_dspr.f90  test_dspr2.f90  test_dsymv.f90  test_dsyr.f90  test_dsyr2.f90  test_dtbmv.f90  test_dtbsv.f90  test_dtpmv.f90  test_dtpsv.f90  test_dtrmv.f90  test_dtrsv.f90  test_zgbmv.f90  test_zgemv.f90  test_zgerc.f90  test_zgeru.f90  test_zhbmv.f90  test_zhemv.f90  test_zher.f90  test_zher2.f90  test_zhpmv.f90  test_zhpr.f90  test_zhpr2.f90  test_ztbmv.f90  test_ztbsv.f90  test_ztpmv.f90  test_ztpsv.f90  test_ztrmv.f90  test_ztrsv.f90
tests/blas/level3/: test_dgemm.f90  test_dgemmtr.f90  test_dsymm.f90  test_dsyr2k.f90  test_dsyrk.f90  test_dtrmm.f90  test_dtrsm.f90  test_zgemm.f90  test_zgemmtr.f90  test_zhemm.f90  test_zher2k.f90  test_zherk.f90  test_zsymm.f90  test_zsyr2k.f90  test_zsyrk.f90  test_ztrmm.f90  test_ztrsm.f90
tests/blas/refblas/: CMakeLists.txt
tests/blas/target_kind10/: target_blas.f90  target_blas.fypp
tests/blas/target_kind16/: target_blas.f90  target_blas.fypp
tests/blas/target_kind4/: target_blas.fypp
tests/blas/target_kind8/: target_blas.fypp
tests/blas/target_multifloats/: target_blas.f90  target_blas.fypp
tests/common/: CMakeLists.txt
tests/common/target_kind10/: target_conv.f90
tests/common/target_kind16/: target_conv.f90
tests/common/target_kind4/: target_conv.f90
tests/common/target_kind8/: target_conv.f90
tests/common/target_multifloats/: target_conv.f90
tests/lapack/: CHANGELOG.md  CMakeLists.txt  README.md  TODO.md
tests/lapack/auxiliary/: test_ddisna.f90  test_dgbcon.f90  test_dgbequ.f90  test_dgbequb.f90  test_dgebak.f90  test_dgebal.f90  test_dgecon.f90  test_dgeequ.f90  test_dgeequb.f90  test_dggbak.f90  test_dggbal.f90  test_dgtcon.f90  test_disnan.f90  test_dlacn2.f90  test_dlacon.f90  test_dlacpy.f90  test_dladiv.f90  test_dlamrg.f90  test_dlangb.f90  test_dlange.f90  test_dlangt.f90  test_dlanhs.f90  test_dlansb.f90  test_dlansf.f90  test_dlansp.f90  test_dlanst.f90  test_dlansy.f90  test_dlantb.f90  test_dlantp.f90  test_dlantr.f90  test_dlapll.f90  test_dlapmr.f90  test_dlapmt.f90  test_dlapy2.f90  test_dlapy3.f90  test_dlarnv.f90  test_dlartg.f90  test_dlartgp.f90  test_dlartgs.f90  test_dlaset.f90  (+102 more)
tests/lapack/common/: compare.f90  prec_kinds.f90  prec_report.f90  ref_quad_lapack.f90  ref_quad_lapack.quad_renames.txt  target_lapack_body.fypp  test_data.f90
tests/lapack/eigenvalue/: test_dbbcsd.f90  test_dgedmd.f90  test_dgedmdq.f90  test_dgees.f90  test_dgeesx.f90  test_dgeev.f90  test_dgeevx.f90  test_dgges.f90  test_dgges3.f90  test_dggesx.f90  test_dggev.f90  test_dggev3.f90  test_dggevx.f90  test_dggglm.f90  test_dgglse.f90  test_dhgeqz.f90  test_dhsein.f90  test_dhseqr.f90  test_dpteqr.f90  test_dsbev.f90  test_dsbev_2stage.f90  test_dsbevd.f90  test_dsbevd_2stage.f90  test_dsbevx.f90  test_dsbevx_2stage.f90  test_dsbgst.f90  test_dsbgv.f90  test_dsbgvd.f90  test_dsbgvx.f90  test_dspev.f90  test_dspevd.f90  test_dspevx.f90  test_dspgst.f90  test_dspgv.f90  test_dspgvd.f90  test_dspgvx.f90  test_dstebz.f90  test_dstedc.f90  test_dstegr.f90  test_dstein.f90  (+100 more)
tests/lapack/factorization/: test_dgbtrf.f90  test_dgebrd.f90  test_dgehrd.f90  test_dgelq.f90  test_dgelqf.f90  test_dgelqt.f90  test_dgemlq.f90  test_dgemlqt.f90  test_dgemqr.f90  test_dgemqrt.f90  test_dgeqlf.f90  test_dgeqp3.f90  test_dgeqp3rk.f90  test_dgeqr.f90  test_dgeqr2p.f90  test_dgeqrf.f90  test_dgeqrfp.f90  test_dgeqrt.f90  test_dgerqf.f90  test_dgetri.f90  test_dgetsqrhrt.f90  test_dgghrd.f90  test_dggqrf.f90  test_dggrqf.f90  test_dgttrf.f90  test_dopgtr.f90  test_dopmtr.f90  test_dorbdb.f90  test_dorbdb1.f90  test_dorbdb2.f90  test_dorbdb3.f90  test_dorbdb4.f90  test_dorbdb5.f90  test_dorbdb6.f90  test_dorcsd.f90  test_dorcsd2by1.f90  test_dorg2l.f90  test_dorg2r.f90  test_dorgbr.f90  test_dorghr.f90  (+161 more)
tests/lapack/linear_solve/: test_dgbrfs.f90  test_dgbrfsx.f90  test_dgbsv.f90  (+158 more)
tests/mumps/: CHANGELOG.md  CMakeLists.txt  README.md  TODO.md
tests/pbblas/: CHANGELOG.md  CMakeLists.txt  TODO.md
tests/pblas/: CHANGELOG.md  CMakeLists.txt  README.md  TODO.md
tests/ptzblas/: CMakeLists.txt  TODO.md
tests/scalapack/: CHANGELOG.md  CMakeLists.txt  README.md  TODO.md
tests/xblas/: CHANGELOG.md  CMakeLists.txt  README.md  TODO.md
(+734 files in other folders)
