[project]
name = "fortran-migrator"
version = "0.1.0"
description = "Automated type-migration tool for Fortran/C numerical libraries"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.3",
    "tqdm>=4.67.3",
]

[project.scripts]
migrator = "migrator.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/migrator"]

[dependency-groups]
dev = [
    "fypp>=3.2",
    "pytest>=9.0.3",
]
